--- a/bright-space-client/src/index.css
+++ b/bright-space-client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Navbar Style By Hisam */
+.mainMenu-style {
+    @apply transition duration-300 hover:text-[#5F2DED]
+}
+.dropdown-menuItem-style {
+    @apply transition duration-300 hover:text-[#5F2DED] border-l-2 border-transparent hover:border-[#5F2DED]
+}
