--- a/bright-space-client/src/pages/AiAssistant/css/AiAssistant.css
+++ b/bright-space-client/src/pages/AiAssistant/css/AiAssistant.css
@@ -1,4 +1,4 @@
-/* Custom scrollbar styles */
+Custom scrollbar styles
 .custom-scrollbar {
     scrollbar-width: auto;
     scrollbar-color: #FFCB80 #FFECD6;
